--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  margine: 0;
+  margin: 0;
   padding: 0;
   text-align: left;
   background: linear-gradient(rgba(0, 0, 150, 0.5), rgba(0, 0, 50, 0.5)),
@@ -43,7 +43,7 @@ a:hover {
 }
 
 .container {
-  max-width: 960px;
+  max-width: 980px; /* , 768px, 640px different scrn size */
   margin: 40px auto;
   padding: 32px;
   background: floralwhite;
