--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,11 @@
 html {
   box-sizing: border-box;
   margin: 0;
-  background: linear-gradient(rgba(0, 0, 150, 0.5), rgba(0, 0, 50, 0.5)),
+  background: linear-gradient(  rgba(0, 0, 68, 0.5), rgba(0, 0, 68, 0.5)),
   url("../img/backGround.jpg");
 }
 
 body {
-
   height: 100%; 
   margin-right: auto;
   margin-left:  auto;
@@ -39,7 +38,6 @@ html {
     margin: 0;
 }
 
-
 a:hover {
   text-decoration: underline;
 }
@@ -48,15 +46,13 @@ a:hover {
   max-width: 980px; 
   margin: 40px auto;
   padding: 32px;
-  background: floralwhite;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 section {
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-gap: 20px;
-  padding: 24px 0;
+  padding: 23px 0;
   border-bottom: 1px solid burlywood;
 }
 
@@ -73,7 +69,7 @@ img.YoungCho {
   width: 130px;
 }
 .my-name {
-  font-size: 48px;
+  font-size: 36px;
   line-height: 1;
 }
 
@@ -90,6 +86,7 @@ img.YoungCho {
 }
 
 .link-item {
+  margin: -18px;
   display: flex;
   align-items: center;
   flex: 1;
