--- a/assets/css/portf.css
+++ b/assets/css/portf.css
@@ -1,61 +1,124 @@
-
-  /* .container {
+/* .container {
       width:150px;
   } */
 
-  .wrapper {
-    min-height: 100%;
-    margin-bottom: -50px;
-  }
-  .footer
-   {
-    height: 50px;
-    background-color: #0099cc;
-    color: #631010;
-    text-align: center;
-    font-size: 12px;
-    padding: 15px;
-  }
+.wrapper {
+  min-height: 100%;
+  margin-bottom: -50px;
+}
+.footer {
+  height: 50px;
+  background-color: #0099cc;
+  color: #631010;
+  text-align: center;
+  font-size: 12px;
+  padding: 15px;
+}
 
 div.gallery {
-    border: 1px solid rgb(90, 37, 37);
+  border: 1px solid rgb(90, 37, 37);
 }
 
 div.gallery:hover {
-    border: 1px solid #777;
+  border: 1px solid #777;
 }
 
 div.gallery img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 div.desc {
-    padding: 15px;
-    text-align: center;
+  padding: 15px;
+  text-align: center;
 }
 
-.responsive {
-    padding: 0 6px;
-    float: left;
-    width: 24.99999%;
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
 }
 
-@media only screen and (max-width: 700px) {
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {
+    width: 8.33%;
+  }
+  .col-s-2 {
+    width: 16.66%;
+  }
+  .col-s-3 {
+    width: 25%;
+  }
+  .col-s-4 {
+    width: 33.33%;
+  }
+  .col-s-5 {
+    width: 41.66%;
+  }
+  .col-s-6 {
+    width: 50%;
+  }
+  .col-s-7 {
+    width: 58.33%;
+  }
+  .col-s-8 {
+    width: 66.66%;
+  }
+  .col-s-9 {
+    width: 75%;
+  }
+  .col-s-10 {
+    width: 83.33%;
+  }
+  .col-s-11 {
+    width: 91.66%;
+  }
+  .col-s-12 {
+    width: 100%;
+  }
 }
-
-@media only screen and (max-width: 500px) {
-    .responsive {
-        width: 100%;
-    }
+@media only screen and (min-width: 800px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
 }
 
 .clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
