--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 html {
   box-sizing: border-box;
   margin: 0;
-  background: linear-gradient(  rgba(0, 0, 68, 0.5), rgba(0, 0, 68, 0.5)),
-  url("../img/backGround.jpg");
+  background: linear-gradient(rgba(0, 0, 68, 0.5), rgba(0, 0, 68, 0.5)),
+    url("../img/backGround.jpg");
 }
 
 body {
-  height: 100%; 
+  height: 100%;
   margin-right: auto;
-  margin-left:  auto;
+  margin-left: auto;
   max-width: 960px;
   padding-right: 10px;
-  padding-left:  10px; 
+  padding-left: 10px;
 }
 
 *,
@@ -20,9 +20,11 @@ body {
   padding: 8px;
   box-sizing: inherit;
 }
-
+.YoungCho {
+  max-width: 79%;
+}
 img {
-  max-width: 100%;
+  max-width: 25%;
 }
 
 .icon {
@@ -34,8 +36,7 @@ img {
 }
 
 html {
-
-    margin: 0;
+  margin: 0;
 }
 
 a:hover {
@@ -43,7 +44,7 @@ a:hover {
 }
 
 .container {
-  max-width: 980px; 
+  max-width: 980px;
   margin: 40px auto;
   padding: 32px;
 }
@@ -65,9 +66,6 @@ section:last-child {
   font-size: 18px;
 }
 
-img.YoungCho {
-  width: 130px;
-}
 .my-name {
   font-size: 36px;
   line-height: 1;
